--- a/WebKutuphanem/appsettings.json
+++ b/WebKutuphanem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WebKutuphanemDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=SQL9001.site4now.net;Initial Catalog=db_ac4e93_eneskaboglu;User Id=db_ac4e93_eneskaboglu_admin;Password=EnesKaboglu53;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
